<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.signin.SignInActivity">

  <android.support.design.widget.TextInputLayout
    android:id="@+id/signin_email_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/signin_password_layout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/signin_email_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:inputType="textEmailAddress"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/signin_password_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/signin_email_layout">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/signin_password_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"/>
  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/signin_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/signin"
    app:layout_constraintBottom_toTopOf="@id/signin_signup_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/signin_password_layout"/>

  <Button
    android:id="@+id/signin_signup_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/signup"
    app:layout_constraintBottom_toTopOf="@id/signin_google_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/signin_button"/>

  <com.google.android.gms.common.SignInButton
    android:id="@+id/signin_google_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/signin_signup_button"/>

</android.support.constraint.ConstraintLayout>