<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.profile.modify.ModifyProfileActivity">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/modify_profile_app_bar_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@drawable/toolbar"
    app:elevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/app_bar_height">

      <ImageButton
        android:id="@+id/modify_profile_back_button"
        style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingStart="@dimen/spacing_unit_narrow"
        android:paddingEnd="@dimen/spacing_unit_narrow"
        android:src="@drawable/ic_back_black_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <TextView
        android:id="@+id/modify_profile_title"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/modify_profile"
        android:textColor="@color/colorOnBackgroundHighEmphasis"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <Button
        android:id="@+id/modify_profile_complete_button"
        style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingStart="@dimen/spacing_unit_narrow"
        android:paddingEnd="@dimen/spacing_unit_narrow"
        android:text="@string/complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>
  </android.support.design.widget.AppBarLayout>

  <com.makeramen.roundedimageview.RoundedImageView
    android:id="@+id/modify_profile_photo"
    android:layout_width="@dimen/profile_photo"
    android:layout_height="@dimen/profile_photo"
    android:layout_marginTop="@dimen/spacing_unit_very_wide"
    android:layout_marginBottom="@dimen/spacing_unit_narrow"
    app:layout_constraintBottom_toTopOf="@id/modify_profile_change_photo_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/modify_profile_app_bar_layout"
    app:riv_oval="true"/>

  <Button
    android:id="@+id/modify_profile_change_photo_button"
    style="@style/Widget.AppCompat.Button.Borderless"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_unit_narrow"
    android:layout_marginBottom="@dimen/spacing_unit_very_wide"
    android:text="@string/change_profile_photo"
    android:textColor="@color/colorOnBackgroundMediumEmphasis"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/modify_profile_photo"/>
</android.support.constraint.ConstraintLayout>